CHANGELOG

2.0.5
UTILS:
* pa_rule-edit introduce 'filter=(description.length <>=! NUMBER)'
* pa_rule-edit actions=exportToExcel - introduce column 'log_profile_name' to display the log forwarding profile name
* pa_address-edit introduce new 'filter=(value has.wrong.network)' - display objects where IP-value does not fit to calculated IP-network

EXAMPLES:
* update template script to show how UTIL() class usage make your scripting life easier

BUGFIX:
* class AddressStore - introduce AddressGroup validation for method  nestedPointOfView()
* UTIL | bugfix related to display_error_usage_exit usage from class UTIL
* UTIL | class CallContext - introduce $util variable to use single ava
* class SecurityProfileStor | bugfix for calling URLProfileStore and cu…  …
* class customURLProfileStore | bugfix if XMLnode 'list' is not available
* class IPsecTunnel | bugfix NOT create XML node 'proxy-id-v6' if not avai…
* UTIL | bugfix to get argument 'apitimeout=XYZ' into working mode
* UTIL | reinitiate class PH() at calling of UTIL()
* UTIL | pa_rule-edit actions=exportToExcel - related to class Schedule() introduce in the past
* UTIL | pa_address-edit actions=replaceByMembersAndDelete - missing validation if object is group

2.0.4 (20210519)
UTILS:
* pa-address/service/tag/schedule-edit introduce argument loadpanoramapushedconfig to display local and panorama pushed objects


2.0.3 (20210517)
BUGFIX:
* bugfix for pa_addressgroup-merger and pa_service-merger


2.0.2
UTILS:
* pa-address/service/tag/schedule-edit introduce argument loadpanoramapushedconfig to display local and panorama pushed objects

BUGFIX:
class SecurityProfileStore/SecurityProfileGroup - related to classes Container/DeviceCloud/PanoramaConf/PanConf/VirtualSystem/DeviceGroup - correction of SecurityProfileStore type - fix related if argument 'loadpanoramapushedconfig' was used
pa_tag-edit/pa_schedule-edit/pa_rule-edit - fix XML out file; if all objects are deleted, so that XML Node do not contain any Newline


